Integrated Distill library

--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "psr-0": { "Symfony\\": "src/" }
     },
     "require": {
-        "ext-zip": "*",
         "guzzlehttp/guzzle": "~4.0",
         "guzzlehttp/progress-subscriber": "~1.1",
         "symfony/console": "~2.5",
-        "symfony/filesystem": "~2.5"
+        "symfony/filesystem": "~2.5",
+        "raulfraile/distill": "~0.7"
     },
     "extra": {
         "branch-alias": {
