--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "autoload": {
-        "psr-0": { "Symfony\\": "src/" }
+        "psr-4": { "Symfony\\Installer\\": "src/" }
     },
     "require": {
         "ext-zip": "*",
