--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "psr-4": { "Symfony\\": "src/Symfony/" }
     },
     "require": {
+        "php": ">=5.4.0",
         "guzzlehttp/guzzle": "~4.0",
         "guzzlehttp/progress-subscriber": "~1.1",
         "symfony/console": "~2.5",
