Generate the `secret` parameter automatically for new Symfony projects

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "guzzlehttp/progress-subscriber": "~1.1",
         "symfony/console": "~2.5",
         "symfony/filesystem": "~2.5",
+        "symfony/yaml": "~2.5",
         "raulfraile/distill": "~0.7"
     },
     "extra": {
