--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,18 @@ matrix:
     - php: 5.4
     - php: 5.5
     - php: 5.6
+    - php: 7.0
     - php: hhvm
-    - php: nightly
   allow_failures:
     - php: hhvm
+
+before_install:
+  - curl -LSs http://box-project.github.io/box2/installer.php | php
+  - mv box.phar box
+  - chmod 755 box
 
 install:
   - composer install
 
 script:
-  - phpunit -c app
+  - phpunit
