--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,14 @@ matrix:
 
 before_install:
   - composer self-update
-  - curl -LSs https://box-project.github.io/box2/installer.php | php
+  # always use php 5.6 to run Box to avoid issues on HHVM
+  - curl -LSs https://box-project.github.io/box2/installer.php | ~/.phpenv/versions/5.6/bin/php
   - mv box.phar box
   - chmod 755 box
 
 install:
   - composer install
-  - php box build
+  - ~/.phpenv/versions/5.6/bin/php box build
 
 script:
   - phpunit
