--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ matrix:
     - php: 5.5
     - php: 5.6
     - php: 7.0
-    - php: hhvm
-  allow_failures:
-    - php: hhvm
+    - php: 7.1
 
 before_install:
   - composer self-update
@@ -27,4 +25,4 @@ install:
   - ~/.phpenv/versions/5.6/bin/php box build
 
 script:
-  - phpunit
+  - ./vendor/bin/simple-phpunit
